# macarontemplates

./: .gitignore  Makefile  README.md  config.txt  configure.ac
src/: Makefile  Makefile.am  config.proto  main.cpp
